Change html files paths

--- a/aboutus-for-guest.html
+++ b/aboutus-for-guest.html
@@ -19,7 +19,7 @@
 <div class="header font">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index-for-guest.html">
+      <a class="navbar-brand" href="welcome-for-guest.html">
         <img src="./images/home.svg" alt="home" width="30" height="24" class="d-inline-block align-text-top">
         LoftEase</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
 <section class="aboutus">
   <div class="row">
     <div class="image">
-      <img src="images/about-img.svg" alt="">
+      <img src="./images/about-img.svg" alt="">
     </div>
     <div class="content">
       <h3>Why you should rent apartments from us?</h3>
