--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="background-video">
-    <video src="/videos/video1.mp4" class="video_media" autoplay muted loop></video>
+    <video src="./videos/video1.mp4" class="video_media" autoplay muted loop></video>
 </div>
 
 <div class="login">
