--- a/favorites.html
+++ b/favorites.html
@@ -19,7 +19,7 @@
 <div class="header font">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="welcome.html">
         <img src="./images/home.svg" alt="home" width="30" height="24" class="d-inline-block align-text-top">
         LoftEase</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
